--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <div>12345,56</div>
+        <div class="pantalla">12345,56</div>
         <div class="teclado">
        <div class="teclitas">AC</div>
        <div class="teclitas">?</div>
